--- a/style.css
+++ b/style.css
@@ -35,12 +35,12 @@ main {
     justify-content: center;
 }
 
-/* #image {
+#image {
     max-width: 100%;
     max-height: 100%;
     display: block;
     margin: 0 auto;
-} */
+}
 
 #img-caption {
     padding: 1em;
