--- a/style.css
+++ b/style.css
@@ -70,3 +70,9 @@ h3 {
     text-align: center;
     padding: 2em;
 }
+
+@media screen and (max-width: 700px) {
+    #tribute-info {
+        width: 100%;
+    }
+}
